kustomize/overlay/UAT/am/deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: am
  namespace: pnguat

spec:
  replicas: 1

  strategy:
    type: RollingUpdate

  selector:
    matchLabels:
      app: am

  template:
    metadata:
      labels:
        app: am

    spec:
      serviceAccountName: pnguat-sa

      terminationGracePeriodSeconds: 120

      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  - key: node-role.kubernetes.io/forgerock
                    operator: Exists

        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            - labelSelector:
                matchExpressions:
                  - key: app
                    operator: In
                    values:
                      - am
              topologyKey: kubernetes.io/hostname



      topologySpreadConstraints:
        - maxSkew: 1
          topologyKey: kubernetes.io/hostname
          whenUnsatisfiable: DoNotSchedule
          labelSelector:
            matchLabels:
              app: am

      containers:
        - name: openam

          resources:
            requests:
              cpu: "1"
              memory: 2Gi

            limits:
              cpu: "2"
              memory: 4Gi
